Finished checkCompletion on a question and added Prop Types. Still needs switch animation, responsive CSS and completion lock on radio buttons

--- a/src/App.scss
+++ b/src/App.scss
@@ -60,9 +60,9 @@
   position: absolute;
 }
 
-.radio-input{ 
-  display: none;
-}
+// .radio-input{ 
+//   display: none;
+// }
 
 .radio-label{
   padding: 0px;
