--- a/src/App.scss
+++ b/src/App.scss
@@ -1,50 +1,99 @@
+$desktop: 1000px;
+$tablet: 500px;
+
+@mixin desktop {
+    @media (min-width: #{$desktop}) {
+        @content;
+    }
+}
+@mixin tablet {
+  @media (min-width: #{$tablet}) {
+      @content;
+  }
+}
+
 .App {
   text-align: center;
   background-color: #ffffff;
   min-height: 100vh;
 }
 
-.App-container {
-  // display: flex;
-  min-height: 100vh;
-  // flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
-}
-
 .questionContainer {
-  padding: 100px;
-  margin: 100px 10%;
-  border-radius: 7px;
+  padding: 10px;
+  margin: 0px 0px 20px;
+  overflow-x: hidden;
+
+  @include tablet() {
+    margin: 3%;
+    border-radius: 7px;
+  }
+
+  @include desktop {
+    padding: 50px;
+    margin: 3% 10%;
+  }
 }
 
 .questionName{
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 600;
   color: #ffffff;
+
+  @include tablet() {
+    font-size: 30px;
+  }
+
+  @include desktop {
+    font-size: 40px;
+  }
 }
 .completeText{
-  font-size: 32px;
+  font-size: 16px;
   font-weight: 600;
   color: #ffffff;
+
+  @include tablet() {
+    font-size: 24px;
+  }
+
+  @include desktop {
+    font-size: 32px;
+  }
 }
 
 .selectionContainer{
 	display: flex;
 	justify-content: center;
-	padding: 0.4rem 0.8rem;
 	width: 100%;
   color: white;
+
+  @include tablet() {
+    padding: 0.2rem 0.4rem;
+  }
+
+  @include desktop {
+    padding: 0.4rem 0.8rem;
+  }
 }
 
 .radioGroup {
-  padding: 20px;
-  margin: 10px;
-  width: 75%;
+  padding: 10px;
+  margin: 10px 0px;
+  width: 90%;
   border:2px solid #fff9f5a2;
   border-radius:2.4rem;
   position:relative;
   z-index: 1;
+
+  @include tablet() {
+    padding: 15px;
+    width: 80%;
+  }
+
+  @include desktop {
+    padding: 20px;
+    width: 75%;
+  }
 
   input {
     display:none;
@@ -52,12 +101,20 @@
 
   label { 
     width:50%;
-    font-size: 24px;
+    font-size: 17px;
     font-weight: 500;
     cursor: pointer;
     display:inline-block;
     line-height:30px;
     transition:0.3s;
+
+    @include tablet() {
+      font-size: 21px;
+    }
+  
+    @include desktop {
+      font-size: 24px;
+    }
   }
 
   .selectedSlider {
